docs: Documented block routes
