# docs/swagger.yaml
@@ -4,6 +4,36 @@ definitions:
       error:
         type: string
     type: object
+  routes.BlockModelResponse:
+    properties:
+      blockType:
+        type: string
+      courseId:
+        type: string
+      data:
+        $ref: '#/definitions/routes.DataType'
+    required:
+    - blockType
+    - courseId
+    - data
+    type: object
+  routes.CreateBlockType:
+    properties:
+      blockType:
+        type: string
+      data:
+        $ref: '#/definitions/routes.DataType'
+    required:
+    - blockType
+    - data
+    type: object
+  routes.DataType:
+    properties:
+      format:
+        type: string
+      text:
+        type: string
+    type: object
   routes.LoginModel:
     properties:
       password:
@@ -58,6 +88,136 @@ definitions:
 info:
   contact: {}
 paths:
+  /block:
+    delete:
+      description: Will remove block from course but won't delete it from database
+      parameters:
+      - description: Block ID
+        in: path
+        name: blockId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Invalid ID
+          schema:
+            $ref: '#/definitions/apierr.ApiError'
+        "404":
+          description: Block not found
+          schema:
+            $ref: '#/definitions/apierr.ApiError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/apierr.ApiError'
+      summary: Remove block
+      tags:
+      - blocks
+    get:
+      description: Get block data
+      parameters:
+      - description: Block ID
+        in: path
+        name: blockId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/routes.BlockModelResponse'
+        "400":
+          description: Invalid ID
+          schema:
+            $ref: '#/definitions/apierr.ApiError'
+        "404":
+          description: Block not found
+          schema:
+            $ref: '#/definitions/apierr.ApiError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/apierr.ApiError'
+      summary: Get block data
+      tags:
+      - blocks
+    patch:
+      consumes:
+      - application/json
+      description: Change single or multiple parameters of the block
+      parameters:
+      - description: Block ID
+        in: path
+        name: blockId
+        required: true
+        type: integer
+      - description: Block payload
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/routes.CreateBlockType'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/routes.BlockModelResponse'
+        "400":
+          description: Invalid ID
+          schema:
+            $ref: '#/definitions/apierr.ApiError'
+        "404":
+          description: Block not found
+          schema:
+            $ref: '#/definitions/apierr.ApiError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/apierr.ApiError'
+      summary: Modify block
+      tags:
+      - blocks
+    post:
+      consumes:
+      - application/json
+      description: Register a new account
+      parameters:
+      - description: Block payload
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/routes.CreateBlockType'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/routes.BlockModelResponse'
+        "400":
+          description: Invalid JSON
+          schema:
+            $ref: '#/definitions/apierr.ApiError'
+        "403":
+          description: No permission
+          schema:
+            $ref: '#/definitions/apierr.ApiError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/apierr.ApiError'
+      summary: Register a new account
+      tags:
+      - blocks
   /login:
     post:
       consumes:
